--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ window.onresize = function(){
 			登录/联机
 		</button>
 		
-		<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
+		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100px; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 
 
 <script>
