--- a/one2.html
+++ b/one2.html
@@ -1,45 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>五子棋-人机对战</title>
-<link href="./css/title.css" rel="stylesheet" type="text/css" />
-<link href="./css/button.css" rel="stylesheet" type="text/css" />
-<link href="./css/p.css" rel="stylesheet" type="text/css" />
-<link href="./css/clear.css" rel="stylesheet" type="text/css" />
-
-<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+	<head>
+		<meta charset="UTF-8">
+		<title>五子棋-人机对战</title>
+		<link href="./css/title.css" rel="stylesheet" type="text/css" />
+		<link href="./css/button.css" rel="stylesheet" type="text/css" />
+		<link href="./css/p.css" rel="stylesheet" type="text/css" />
+		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
+		
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
 eruda.init();
 console.log('控制台打印信息');
 </script>
-
+		
 <style>
 @font-face{
 	font-family:fzybxskt; /*方正硬笔行书楷体*/
 	src:url("./fonts/fzybxskt.ttf");
 }
 
-/*手机*/
+/*通用*/
 h1{
 	font-size: 50px;
 }
-
-/*宽>高（电脑）*/
-@media not screen and (orientation: portrait){
-	h1{
-		font-size: 60px;
-	}
+div{
+	position: absolute;
+	top: 6px;
 }
-
-/*0.6<宽/高<1（平板）*/
-@media screen and (max-aspect-ratio:100/100) and (min-aspect-ratio:70/100){
-	h1{
-		font-size:50px;
-	}
-}
-
-/*通用*/
 button{
 	height:36px;
 	color:white;
@@ -48,27 +36,31 @@ button{
 	line-height:20px;
 }
 </style>
-</head>
-<body>
+		
+	</head>
+	<body>
+		
+		<div>
+			<button onclick="location.href='./index.html';" id="back">返回</button>
+			<button onclick="init();" id="again_two">重来</button>
+			<button onclick="clear_data();">清除胜率数据</button>
+		</div>
+		
+		<h1 id="h1" style="text-align:center;font-size:50px;">五子棋-人机对战</h1>
+		<br/><b id="message" style="position:absolute;top:200px;">下棋方：黑棋</b>
+		<br/><b id="message2" style="position:absolute;top:220px;"></b>
+		<b id="win" style="border:1px solid black;position:absolute;top:150px;left:384px;height:89px;width:124px;display:flex;/*flex布局*/flex-direction:column;/*↓*/justify-content:space-around;align-items:center;">
+			<span style="color:#f00;">胜：0盘</span>
+			<span style="color:#000;">负：0盘</span>
+			<span style="color:#aaa;">共：0盘</span>
+			<span style="color:#aaa;">胜率：无法计算</span>
+		</b>
+		
+		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:8px;top:239px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
+		<b style="position:absolute;top:739px;">步数：<span id="length">0</span></b>
+		
+		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 
-<button onclick="location.href='./index.html';" id="back">返回</button>
-<button onclick="init();" id="again_two">重来</button>
-	<button onclick="clear_data();">清除胜率数据</button>
-
-<h1 id="h1" style="text-align:center;font-size:50px;">五子棋-人机对战</h1>
-<br/><b id="message" style="position:absolute;top:200px;">下棋方：黑棋</b>
-<br/><b id="message2" style="position:absolute;top:220px;"></b>
-<b id="win" style="border:1px solid black;position:absolute;top:150px;left:384px;height:89px;width:124px;display:flex;/*flex布局*/flex-direction:column;/*↓*/justify-content:space-around;align-items:center;">
-	<span style="color:#f00;">胜：0盘</span>
-	<span style="color:#000;">负：0盘</span>
-	<span style="color:#aaa;">共：0盘</span>
-	<span style="color:#aaa;">胜率：无法计算</span>
-</b>
-
-<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:8px;top:239px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
-<b style="position:absolute;top:739px;">步数：<span id="length">0</span></b>
-
-<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
 <script>
 {
 	let message="五子棋人机对战模式";
@@ -590,6 +582,6 @@ window.onkeydown = function(e) {
 */
 
 </script>
-
-</body>
+		
+	</body>
 </html>
