--- a/two.html
+++ b/two.html
@@ -1,45 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>五子棋-双人对战</title>
-<link href="./css/title.css" rel="stylesheet" type="text/css" />
-<link href="./css/button.css" rel="stylesheet" type="text/css" />
-<link href="./css/p.css" rel="stylesheet" type="text/css" />
-<link href="./css/clear.css" rel="stylesheet" type="text/css" />
-
-<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+	<head>
+		<meta charset="UTF-8">
+		<title>五子棋-双人对战</title>
+		<link href="./css/title.css" rel="stylesheet" type="text/css" />
+		<link href="./css/button.css" rel="stylesheet" type="text/css" />
+		<link href="./css/p.css" rel="stylesheet" type="text/css" />
+		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
+			
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
 eruda.init();
 console.log('控制台打印信息');
 </script>
-
+		
 <style>
 @font-face{
 	font-family:fzybxskt; /*方正硬笔行书楷体*/
 	src:url("./fonts/fzybxskt.ttf");
 }
 
-/*手机*/
+/*通用*/
 h1{
 	font-size: 50px;
 }
-
-/*宽>高（电脑）*/
-@media not screen and (orientation: portrait){
-	h1{
-		font-size: 60px;
-	}
+div{
+	position: absolute;
+	top: 6px;
 }
-
-/*0.6<宽/高<1（平板）*/
-@media screen and (max-aspect-ratio:100/100) and (min-aspect-ratio:70/100){
-	h1{
-		font-size:50px;
-	}
-}
-
-/*通用*/
 button{
 	width:66px;
 	height:36px;
@@ -49,19 +37,30 @@ button{
 	line-height:20px;
 }
 </style>
-</head>
-<body>
+	</head>
+	<body>
+		
+		<div>
+			<button onclick="location.href='./index.html';" id="back">返回</button>
+			<button onclick="init();" id="again_two">重来</button>
+		</div>
+			
+		<h1 id="h1">五子棋-双人对战</h1>
+		<br/><b id="message" style="position:absolute;top:190px;">下棋方：黑棋</b>
+		<br>
+		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:10px;top:216px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
+		<b style="position:absolute;top:716px;">步数：<span id="length">0</span></b>
+		
+<script>
+if (document.body.scrollWidth >= 500){
+	
+}else{
+	
+}
+</script>
+		
+		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 
-<button onclick="location.href='./index.html';" id="back">返回</button>
-<button onclick="init();" id="again_two">重来</button>
-
-<h1 id="h1">五子棋-双人对战</h1>
-<br/><b id="message" style="position:absolute;top:190px;">下棋方：黑棋</b>
-<br>
-<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:10px;top:216px;">你的浏览器不支持“五子棋”，请切换浏览器。</canvas>
-<b style="position:absolute;top:716px;">步数：<span id="length">0</span></b>
-
-<noscript><h1>错误！你的浏览器不支持JavaScript，无法使用《五子棋》！</h1></noscript>
 <script>
 {
 	let message="五子棋双人对战模式";
@@ -91,6 +90,7 @@ button{
 		}
 	},300); 
 }
+
 var over=true; //状态
 var xqf; //下棋方
 var qz; //棋子
@@ -124,12 +124,9 @@ function init(){
 	
 	ctx.drawImage(img,0,0);
 	over=false;
-	if (computer == xqf){
-		computer_play();
-	}
 }
 
-document.onmousedown = function(e){
+document.getElementById("qp").onmousedown = function(e){
 	var y=Math.round((e.pageX-37.7)/24.5);
 	var x=Math.round((e.pageY-247.8)/24.5);
 	console.log(e.pageX+","+e.pageY+"（"+x+","+y+"）");
@@ -214,6 +211,6 @@ window.onkeydown = function(e) {
 */
 
 </script>
-
-</body>
+		
+	</body>
 </html>
