--- a/two.html
+++ b/two.html
@@ -45,14 +45,15 @@ h1{
 div{
 	position: absolute;
 	top: 6px;
+	width: 30%;
 }
 button{
-	width:66px;
-	height:36px;
-	color:white;
-	background-color:#6a8;
-	border-radius:40px;
-	line-height:20px;
+	width: 45%;
+	height: 36px;
+	color: white;
+	background-color: #6a8;
+	border-radius: 40px;
+	line-height: 20px;
 }
 </style>
 	</head>
@@ -66,11 +67,15 @@ button{
 		<h1 id="h1">五子棋-双人对战</h1>
 		<br/><b id="message" style="position:absolute;top:190px;">下棋方：黑棋</b>
 		<br>
-		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:10px;top:216px;">错误！你的浏览器不支持Canvas，无法运行《五子棋》！</canvas>
+		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:0px;top:216px;">错误！你的浏览器不支持Canvas，无法运行《五子棋》！</canvas>
 		<b style="position: absolute; top: 720px; margin-bottom: 20px;">步数：<span id="length">0</span></b>
 		
 <script>
-var scale = 1, position = {left:0,top:720};
+var scale = 1,
+position = {
+	left: 0,
+	top: 216
+};
 if (document.body.scrollWidth >= 500){
 	document.getElementById("qp").width = 500;
 	document.getElementById("qp").height = 500;
@@ -82,6 +87,10 @@ if (document.body.scrollWidth >= 500){
 	document.getElementById("qp").width = document.body.scrollWidth;
 	document.getElementById("qp").height = document.body.scrollWidth;
 	scale = document.body.scrollWidth/500;
+}
+window.onresize = function (){
+	alert("请不要玩弄你的屏幕");
+	location.reload(false);
 }
 </script>
 		
@@ -153,8 +162,8 @@ function init(){
 }
 
 document.getElementById("qp").onmousedown = function (e){
-	var y=Math.round((e.pageX-position.left-28.5*scale)/(24.722*scale));
-	var x=Math.round((e.pageY-position.top-28.5*scale)/(24.722*scale));
+	var x=Math.round((e.pageX-position.left-28.5*scale)/(24.722*scale));
+	var y=Math.round((e.pageY-position.top-28.5*scale)/(24.722*scale));
 	console.log(e.pageX+","+e.pageY+"（"+x+","+y+"）");
 	if (qz[x][y] != undefined & qz[x][y] == "" & over == false){
 		length.innerHTML=Number(length.innerHTML)+1;
@@ -162,7 +171,13 @@ document.getElementById("qp").onmousedown = function (e){
 		if (xqf == "黑棋"){
 			xqf="白棋";
 			ctx.beginPath();
-			ctx.arc(y*24.5+29, x*24.5+178-150, 24.5/2, 0, 2*Math.PI);
+			ctx.arc(
+				x*(24.5*scale)+(28.5*scale),
+				y*(24.5*scale)+(28.5*scale),
+				24.5/2*scale,
+				0,
+				2*Math.PI
+			);
 			ctx.stroke();
 			ctx.fillStyle="black";
 			ctx.fill();
@@ -171,7 +186,13 @@ document.getElementById("qp").onmousedown = function (e){
 		}else if (xqf == "白棋"){
 			xqf="黑棋";
 			ctx.beginPath();
-			ctx.arc(y*24.5+29, x*24.5+178-150, 24.5/2, 0, 2*Math.PI);
+			ctx.arc(
+				x*(24.5*scale)+(28.5*scale),
+				y*(24.5*scale)+(28.5*scale),
+				24.5/2*scale,
+				0,
+				2*Math.PI
+			);
 			ctx.stroke();
 			ctx.fillStyle="white";
 			ctx.fill();
