--- a/two.html
+++ b/two.html
@@ -8,7 +8,7 @@
 		<link href="./css/button.css" rel="stylesheet" type="text/css" />
 		<link href="./css/p.css" rel="stylesheet" type="text/css" />
 		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
-			
+		
 		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
 eruda.init();
@@ -89,7 +89,6 @@ if (document.body.scrollWidth >= 500){
 	scale = document.body.scrollWidth/500;
 }
 window.onresize = function (){
-	alert("请不要玩弄你的屏幕");
 	location.reload(false);
 }
 </script>
@@ -218,7 +217,7 @@ document.getElementById("qp").onmousedown = function (e){
 							message.innerHTML="Game over\n"+qz[i][j]+"胜！！！";
 							setTimeout(function (){
 								over=true;
-								alert("历经"+length.innerHTML+"步\n"+qz[i][j]+"胜！！！");
+								layer.alert("历经"+length.innerHTML+"步\n"+qz[i][j]+"胜！！！", {icon: 0});
 							},1);
 							return ;
 						}
