--- a/one1.html
+++ b/one1.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8" />
+		<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport" />
 		<title>五子棋-人机对战</title>
 		<link href="./css/title.css" rel="stylesheet" type="text/css" />
 		<link href="./css/button.css" rel="stylesheet" type="text/css" />
 		<link href="./css/p.css" rel="stylesheet" type="text/css" />
 		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
 		
-	<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+		<link href="./LayX/layx.min.css" rel="stylesheet" type="text/css" />
+		<script src="./LayX/layx.min.js" type="text/javascript"></script>
+		
+		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
 eruda.init();
 console.log('控制台打印信息');
@@ -22,13 +26,14 @@ console.log('控制台打印信息');
 
 /*通用*/
 h1{
-	font-size: 50px;
+	font-size: 45px;
+	margin-top: 45px;
 }
-div{
+.button-box{
 	position: absolute;
 	top: 6px;
 }
-button{
+.button-box button{
 	height:36px;
 	color:white;
 	background-color:#6a8;
@@ -52,7 +57,7 @@ button{
 	</head>
 	<body>
 		
-		<div>
+		<div class="button-box">
 			<button onclick="location.href='./index.html';" id="back">返回</button>
 			<button onclick="init();" id="again_two">重来</button>
 			<button onclick="clear_data();">清除胜率数据</button>
@@ -69,7 +74,9 @@ button{
 		</b>
 			
 		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:0px;top:239px;">错误！你的浏览器不支持Canvas，无法运行《五子棋》！</canvas>
-		<b style="position:absolute;top:739px;">步数：<span id="length">0</span></b>
+		<b style="position: absolute; top: 740px; margin-bottom: 20px;">步数：<span id="length">0</span></b>
+		
+		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 		
 <script>
 var scale = 1,
@@ -89,15 +96,13 @@ if (document.body.scrollWidth >= 500){
 }else{
 	document.getElementById("qp").width = document.body.scrollWidth;
 	document.getElementById("qp").height = document.body.scrollWidth;
+	document.getElementById("length").parentElement.style.top = (740-500+document.body.scrollWidth)+"px";
 	scale = document.body.scrollWidth/500;
 }
 window.onresize = function (){
 	location.reload(false);
 }
 </script>
-		
-		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
-
 <script>
 {
 	let message="五子棋人机对战模式";
@@ -172,7 +177,7 @@ function init(){
 		}
 	}
 	
-	ctx.drawImage(img,0,0);
+	ctx.drawImage(img, 0, 0, scale*500, scale*500);
 	type="playing";
 	if (computer == xqf){
 		computer_play();
@@ -344,7 +349,16 @@ document.getElementById("qp").onmousedown = function(e){
 									)+
 									';">胜率：'+((all==0)?"无法计算":(Math.round(win/all*10000)/100+"％"))+'</span>'
 								;
-								alert("历经"+length.innerHTML+"步\n"+qz[i][j]+"胜！！！\n============\n胜："+win+"盘\n负："+(all-win)+"盘\n共："+all+"盘\n胜率："+(win/all*100)+"％");
+								layx.alert(
+									(qz[i][j] == computer?"游戏结束（失败）":"游戏结束（成功）"),
+									`历经${length.innerHTML}步<br>
+									${qz[i][j]}（${qz[i][j] == computer?"电脑":"玩家"}）胜！！！<br>
+									============<br>
+									胜：${win}盘<br>
+									负：${all-win}盘<br>
+									共：${all}盘<br>
+									胜率：${win/all*100}％`
+								);
 							}
 						},1);
 						return ;
