--- a/one2.html
+++ b/one2.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8" />
+		<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport" />
 		<title>五子棋-人机对战</title>
 		<link href="./css/title.css" rel="stylesheet" type="text/css" />
 		<link href="./css/button.css" rel="stylesheet" type="text/css" />
 		<link href="./css/p.css" rel="stylesheet" type="text/css" />
 		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
+		
+		<link href="./LayX/layx.min.css" rel="stylesheet" type="text/css" />
+		<script src="./LayX/layx.min.js" type="text/javascript"></script>
 		
 		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
@@ -22,13 +26,14 @@ console.log('控制台打印信息');
 
 /*通用*/
 h1{
-	font-size: 50px;
+	font-size: 45px;
+	margin-top: 45px;
 }
-div{
+.button-box{
 	position: absolute;
 	top: 6px;
 }
-button{
+.button-box button{
 	height:36px;
 	color:white;
 	background-color:#6a8;
@@ -52,13 +57,13 @@ button{
 	</head>
 	<body>
 		
-		<div>
+		<div class="button-box">
 			<button onclick="location.href='./index.html';" id="back">返回</button>
 			<button onclick="init();" id="again_two">重来</button>
 			<button onclick="clear_data();">清除胜率数据</button>
 		</div>
 		
-		<h1 id="h1" style="text-align:center;font-size:50px;">五子棋-人机对战</h1>
+		<h1 id="h1">五子棋-人机对战</h1>
 		<br/><b id="message" style="position:absolute;top:200px;">下棋方：黑棋</b>
 		<br/><b id="message2" style="position:absolute;top:220px;"></b>
 		<b id="win">
@@ -69,7 +74,9 @@ button{
 		</b>
 		
 		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:8px;top:239px;">错误！你的浏览器不支持Canvas，无法运行《五子棋》！</canvas>
-		<b style="position:absolute;top:739px;">步数：<span id="length">0</span></b>
+		<b style="position: absolute; top: 740px; margin-bottom: 20px;">步数：<span id="length">0</span></b>
+		
+		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
 		
 <script>
 var scale = 1,
@@ -89,15 +96,13 @@ if (document.body.scrollWidth >= 500){
 }else{
 	document.getElementById("qp").width = document.body.scrollWidth;
 	document.getElementById("qp").height = document.body.scrollWidth;
+	document.getElementById("length").parentElement.style.top = (740-500+document.body.scrollWidth)+"px";
 	scale = document.body.scrollWidth/500;
 }
 window.onresize = function (){
 	location.reload(false);
 }
 </script>
-		
-		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
-
 <script>
 {
 	let message="五子棋人机对战模式";
@@ -138,7 +143,7 @@ var length=document.getElementById("length"); //下棋数
 
 var ctx=document.getElementById("qp").getContext("2d");
 ctx.font="66px fzybxskt";
-ctx.fillText("棋盘加载中……",0,200);
+ctx.fillText("棋盘加载中……", 0, 200);
 
 var img=new Image();
 img.src="./image/qp.jpg";
@@ -172,7 +177,7 @@ function init(){
 		}
 	}
 	
-	ctx.drawImage(img,0,0);
+	ctx.drawImage(img, 0, 0, 500*scale, 500*scale);
 	type="playing";
 	if (computer == xqf){
 		computer_play();
