--- a/two.html
+++ b/two.html
@@ -9,6 +9,9 @@
 		<link href="./css/p.css" rel="stylesheet" type="text/css" />
 		<link href="./css/clear.css" rel="stylesheet" type="text/css" />
 		
+		<link href="./LayX/layx.min.css" rel="stylesheet" type="text/css" />
+		<script src="./LayX/layx.min.js" type="text/javascript"></script>
+		
 		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>
 eruda.init();
@@ -42,13 +45,11 @@ h1{
 }
 /*通用*/
 
-div{
+.button-box{
 	position: absolute;
 	top: 6px;
-	width: 30%;
 }
 button{
-	width: 45%;
 	height: 36px;
 	color: white;
 	background-color: #6a8;
@@ -59,7 +60,7 @@ button{
 	</head>
 	<body>
 		
-		<div>
+		<div class="button-box">
 			<button onclick="location.href='./index.html';" id="back">返回</button>
 			<button onclick="init();" id="again_two">重来</button>
 		</div>
@@ -70,6 +71,8 @@ button{
 		<canvas id="qp" width="500" height="500" style="border:1px solid black;position:absolute;left:0px;top:216px;">错误！你的浏览器不支持Canvas，无法运行《五子棋》！</canvas>
 		<b style="position: absolute; top: 720px; margin-bottom: 20px;">步数：<span id="length">0</span></b>
 		
+		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
+
 <script>
 var scale = 1,
 position = {
@@ -86,15 +89,13 @@ if (document.body.scrollWidth >= 500){
 }else{
 	document.getElementById("qp").width = document.body.scrollWidth;
 	document.getElementById("qp").height = document.body.scrollWidth;
+	document.getElementById("length").parentElement.style.top = (720-500+document.body.scrollWidth)+"px";
 	scale = document.body.scrollWidth/500;
 }
 window.onresize = function (){
 	location.reload(false);
 }
 </script>
-		
-		<noscript style="z-index: 1; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; background-color: #000000; color: #FFFFFF;"><h1>错误！你的浏览器不支持JavaScript，无法运行《五子棋》！</h1></noscript>
-
 <script>
 {
 	let message="五子棋双人对战模式";
@@ -131,6 +132,14 @@ var qz; //棋子
 
 var message=document.getElementById("message");
 var length=document.getElementById("length"); //下棋数
+var device;
+if (/ipad|iphone|midp|rv:1.2.3.4|ucweb|android|windows ce|windows mobile/.test(navigator.userAgent.toLowerCase())) {
+	//手机
+	device = true;
+}else{
+	//电脑
+	device = false;
+}
 
 var ctx=document.getElementById("qp").getContext("2d");
 ctx.font="66px fzybxskt";
@@ -217,7 +226,7 @@ document.getElementById("qp").onmousedown = function (e){
 							message.innerHTML="Game over\n"+qz[i][j]+"胜！！！";
 							setTimeout(function (){
 								over=true;
-								layer.alert("历经"+length.innerHTML+"步\n"+qz[i][j]+"胜！！！", {icon: 0});
+								layx.alert("Game Over", "历经"+length.innerHTML+"步\n"+qz[i][j]+"胜！！！");
 							},1);
 							return ;
 						}
